--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+#bgForm {
+  background: url('./sprites/bg-form.png') no-repeat center;
+  background-size: 100% 100%;
+}
+
 .App {
   text-align: center;
 }
