--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   background: url('./sprites/bg-form.png') no-repeat center;
   background-size: 100% 100%;
 }
+.formContainer {
+  background-color: rgba(255, 202, 0, 0.8);
+  /* height: 350px; */
+  width: 500px;
+  border-radius: 25px;
+  box-shadow: 0px 5px 50px 5px rgba(255, 202, 0, 1);
+}
+.inpForm {
+  border-radius: 25px;
+  background-color: red;
+}
 
 .App {
   text-align: center;
