--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   background: url('./sprites/bg-form.png') no-repeat center;
   background-size: 100% 100%;
 }
+.bgMain {
+  background: url('./sprites/bg-main.jpg') no-repeat center;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+}
 .formContainer {
   background-color: rgba(255, 202, 0, 0.8);
   /* height: 350px; */
